# ising-model

./: .env.example  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js
data/: betaj_-0.184712_betah_0.2.json  betaj_-0.184712_betah_0.2_j2j1_-0.50.json  betaj_-0.184712_betah_0.2_j2j1_-1.00.json  betaj_-0.184712_betah_0.2_j2j1_0.00.json  betaj_-0.184712_betah_0.2_j2j1_0.50.json  betaj_-0.184712_betah_0.2_j2j1_1.00.json  betaj_-0.184712_betah_0.4.json  betaj_-0.184712_betah_0.4_j2j1_-0.50.json  betaj_-0.184712_betah_0.4_j2j1_-1.00.json  betaj_-0.184712_betah_0.4_j2j1_0.00.json  betaj_-0.184712_betah_0.4_j2j1_0.50.json  betaj_-0.184712_betah_0.4_j2j1_1.00.json  betaj_-0.184712_betah_0.6.json  betaj_-0.184712_betah_0.6_j2j1_-0.50.json  betaj_-0.184712_betah_0.6_j2j1_-1.00.json  betaj_-0.184712_betah_0.6_j2j1_0.00.json  betaj_-0.184712_betah_0.6_j2j1_0.50.json  betaj_-0.184712_betah_0.6_j2j1_1.00.json  betaj_-0.184712_betah_0.json  betaj_-0.184712_betah_0_j2j1_-0.50.json  betaj_-0.184712_betah_0_j2j1_-1.00.json  betaj_-0.184712_betah_0_j2j1_0.00.json  betaj_-0.184712_betah_0_j2j1_0.50.json  betaj_-0.184712_betah_0_j2j1_1.00.json  betaj_-0.192743_betah_0.2.json  betaj_-0.192743_betah_0.2_j2j1_-0.50.json  betaj_-0.192743_betah_0.2_j2j1_-1.00.json  betaj_-0.192743_betah_0.2_j2j1_0.00.json  betaj_-0.192743_betah_0.2_j2j1_0.50.json  betaj_-0.192743_betah_0.2_j2j1_1.00.json  betaj_-0.192743_betah_0.4.json  betaj_-0.192743_betah_0.6.json  (+445 more)
ising-core/: Cargo.toml  LICENSE_MIT
ising-core/src/: lib.rs
(+57 files in other folders)
